--- a/02-express/views/jokes.ejs
+++ b/02-express/views/jokes.ejs
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jokes are on me</title>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/assets/style.css">
-</head>
-
-<body>
+<%- include('partials/header') %>
 	<h1>Here's a joke for you!</h1>
 
 	<p><%= oneliner %></p>
-</body>
-</html>
+<%- include('partials/footer') %>
