--- a/02-express/views/partials/header.ejs
+++ b/02-express/views/partials/header.ejs
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title><%= title %></title>
+	<title>
+		<% if (typeof title !== "undefined") { %>
+			<%= title %>
+		<% } %>
+	</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/assets/style.css">
 </head>
