Show when someone connects/disconnects.

--- a/07-chat/public/assets/css/style.css
+++ b/07-chat/public/assets/css/style.css
@@ -31,6 +31,10 @@
 	/* height: calc(100vh - 2.25rem - 2px); */
 }
 
+#messages .notice {
+	font-style: italic;
+}
+
 /*
 #messages {
 	display: flex;
