--- a/07-chat/public/assets/css/style.css
+++ b/07-chat/public/assets/css/style.css
@@ -1,4 +1,5 @@
 #app,
+#start,
 #chat-wrapper {
 	height: 100vh;
 	width: 100vw;
@@ -6,6 +7,20 @@
 
 #app {
 	background-color: aliceblue;
+}
+
+.hide {
+	display: none !important;
+}
+
+#start {
+	display: flex;
+	align-items: center;
+}
+
+#username-form {
+	margin: 0 auto;
+	text-align: center;
 }
 
 #chat-wrapper {
